# Training

./: README.md  artifical_intelligence.txt  day01.py  day02.ipynb  day03.ipynb  insurance.txt  pyproject.toml  research_agent.py  structuring.py  the-verdict.txt
AI_Code_Reviewer_Agent/: app.py
AI_Code_Reviewer_Agent/samples/: buggy_code.py  coding1.py  data_preprocessing.py
AI_SDLC/: checkpointers.db  config.py  graph.py  main.py  prompt.py
Andromeda_Agent_01/: andromeda_02.ipynb  andromeda_03.ipynb  andromeda_04.ipynb  app.py
Andromeda_Agent_01/workspace/: AGENTS.md
Data/: psychology.txt
andromeda/: AGENTS.md  README.md  TODO.md  __init__.py
andromeda.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
andromeda/cli/: __init__.py  commands.py  config_generator.py  diagnostics.py  display.py  env_generator.py  helpers.py  prebuilt_templates.py  setup_wizard.py  validators.py  visualize.py  visualize_helpers.py
andromeda/config/: config.py  yaml_utils.py
andromeda/core/: __init__.py  agent.py  planner.py  supervisor.py  team.py  workspace.py
andromeda/core/middleware/: __init__.py  common.py  factory.py  guardrails.py  privacy.py  skills.py  tooling.py
andromeda/core/workflow/: __init__.py  base.py  builder.py  checkpointing.py  eval_scheduler.py  evaluation.py  evaluators.py
andromeda/ports/: __init__.py  _vector_math.py  bm25.py  faiss.py  opensearch.py
andromeda/reporting/: mermaid.py  sufficiency_checker.py  writer.py
andromeda/retrievers/: __init__.py  backends.py  config.py  core.py  docstore.py  graph.py  ingest.py  ingestion_index.py  kg.py  processing.py  rerankers.py  retrievers.py  service.py  sqlalchemy_url.py
andromeda/runtime/: __init__.py  agents.py  context.py  json_utils.py  registry.py  validation.py  workflows.py
andromeda/tools/: __init__.py  filesystem.py  guidewire.py  mcp_adapter.py  shell.py  toolkit.py  tools.py  vfs_filesystem.py
andromeda/utils/: __init__.py  github_copilot.py  ignore_rules.py  langtils.py  logger.py  openai_codex.py  openai_responses.py  prompts.py  sandbox.py  schemas.py  secure_store.py
andromeda/workspace/: __init__.py  __main__.py  availability.py  backends.py  paths.py  policy.py  provider_settings.py  providers.py  sandbox.py  sandbox_providers.py  seeds.py  session.py
docs/: sphinx_requirements.txt
docs/_deploy/: deploy.yml
docs/internal/: andromeda-agent.Dockerfile  nerdctl-kata-setup.md  workspace-sandbox-providers.md
docs/source/: architecture.rst  changelog.rst  cli-usage.rst  conf.py  contributing.rst  examples.rst  governance_and_responsible_ai.rst  index.rst  installation.rst  overview.rst  quickstart.rst
docs/source/_static/: custom.css  llms.txt
docs/source/advanced_concepts/: debugging-workflows.rst  guardrails.rst  index.rst  middleware.rst  retrievers.rst  streaming-patterns.rst  structured-outputs.rst
docs/source/api_reference/: andromeda.config.rst  andromeda.core.rst  andromeda.reporting.rst  andromeda.rst  andromeda.runtime.rst  andromeda.tools.rst  andromeda.utils.rst  index.rst
docs/source/basic_concepts/: agents.rst  configuration.rst  index.rst  models.rst  supervisors.rst  teams.rst  tools.rst  workflow-builder.rst  workspace-agents.rst
docs/source/integrations/: github-copilot.rst  index.rst  langfuse.rst  mcp-servers.rst  openai-codex.rst  skills.rst
vector_embedding_db/: index.faiss  index.pkl
